@@ -88,8 +88,8 @@ This class provides the following methods:
 This returns the radius in kilometers around the specified location where the
 IP address is likely to be.
 
-This attribute is only available from the Insights end point and the GeoIP2
-Enterprise database.
+This attribute is returned by all end points and location databases except
+Country.
 
 =head2 $location_rec->average_income()
 
